2007-10-12 Takuro Ashie <ashie@homa.ne.jp>

	* src/charset.[ch], src/auto_completion.c: Remove USE_GTK2.
	* src/Makefile.am, src/dirview.c, src/dirview2.c:
	Move dirview2.c to dirview.c.

2007-10-12 Takuro Ashie <ashie@homa.ne.jp>

	* thumbnail/gimv_thumb.c
	  image_view/mplayer_image_loader.c
	  image_view/prefs_mplayer.c
	  image_view/gimv_xine.c
	  image_view/gimv_mplayer.c
	  thumbnail_view/detailview2.c
	  thumbnail_view/detailview.c:
	Remove USE_GTK2.

2007-10-12 Takuro Ashie <ashie@homa.ne.jp>

	* configure.in
	  plugins/image_loader/pixbuf_anim.c
	  plugins/image_loader/pixbuf_anim.h
	  plugins/image_loader/pixbuf_loader.c
	  plugins/image_loader/pixbuf_loader.h
	  plugins/image_loader/svg.c
	  plugins/image_loader/Makefile.am
	  src/pixbuf_utils.c
	  src/pixbuf_utils.h
	  src/prefs_ui/prefs_ui_common.c
	  src/help.c:
	Remove ENABLE_GDK_PIXBUF and HAVE_GDK_PIXBUF

2007-10-12 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_anim.c, src/gimv_image.c: Remove imlib related code.

2007-10-12 Takuro Ashie <ashie@homa.ne.jp>

	* configure.in: Remove --with-gtk2 option.

2005-01-28 Takuro Ashie <ashie@homa.ne.jp>

	* plugins/image_view/gimv_xine.c, plugins/image_view/gimv_xine.h,
	  plugins/image_view/gimv_xine_priv.c,
	  plugins/image_view/gimv_xine_priv.h,
	  plugins/image_view/prefs_xine.c:
	Enabled to choose audio & video drivers for Xine view.

2005-01-07 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_thumb_win.c: Fixed compile error on Gtk+-1.2.
	Thanks reporting > shippo-san

2004-12-29 Takuro Ashie <ashie@homa.ne.jp>

	* Version-0.2.27

2004-12-21 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_thumb_win.[ch], po/ja.po: Added "Slideshow Options".

2004-12-21 Takuro Ashie <ashie@homa.ne.jp>

	* src/gimv_image_win.c: Don't change the file to the next if the current
	file is movie and playing while slideshow.
	This patch is contributed by Christian Hammers
	<lathspell@users.sourceforge.net>. Thanks!

2004-12-21 Takuro Ashie <ashie@homa.ne.jp>
